# darphane

./: LICENSE  README.md  altin.json  altin_core.py  kurlar.json  main.py  mevzuat.json  mevzuat_core.py  pyproject.toml  tatiller.json  tatiller_core.py  tcmb_core.py
.github/workflows/: update.yml
src/darphane/: __init__.py  client.py
