[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darphane"
version = "0.1.0"
authors = [
    { name = "@kessbrekker", email = "contact@kessbrekker.com" }
]
description = "Sıfır maliyetli, her gün güncel Türkiye finans, altın, tatil ve mevzuat SDK'sı"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0"
]

[project.urls]
"Homepage" = "https://github.com/kessinc/darphane"
"Bug Tracker" = "https://github.com/kessinc/darphane/issues"